# simple_pypi_test_package

./: MANIFEST.in  pyproject.toml  setup.py
simple_pypi_test_package/: __init__.py
