[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_pypi_test_package"
version = "0.2.0"
description = "EmbeddingGemma-300M model packaged for PyPI distribution"
authors = [{name = "Mcilie"}]
requires-python = ">=3.7"

[tool.setuptools.package-data]
simple_pypi_test_package = ["model_parts/*"]
